package com.company;

public interface ICar
{
    String getRegistrationNumber();
    String getMake();
    String getModel();
    int getNumberOfDoors();
    int getRegistrationFee();

}
